--- a/201711/2.reorder_target_color/reorder_target_color_quiz.Rmd
+++ b/201711/2.reorder_target_color/reorder_target_color_quiz.Rmd
@@ -1,3 +1,5 @@
 Q) 기본 데이터셋인 mtcars를 이용하여 다음 차트를 그려주세요  
+  - cyl 과 hp 를 기준으로 정렬
+  - 군집 내에서 hp가 튀는 차량 빨간색으로 표시  
 
 ![target!](reorder_target_color_result.PNG)
