img_path correction

--- a/201712/1.retension/retension_quiz.Rmd
+++ b/201712/1.retension/retension_quiz.Rmd
@@ -34,4 +34,4 @@ raw.data <-
   distinct %>%
   arrange(user.id, buy.date)
 ```
-![target!](retension_result_.PNG)
+![target!](retension_result.PNG)
