--- a/201712/2.daily_purchase_by_group/daily_purchase_by_group_quiz.Rmd
+++ b/201712/2.daily_purchase_by_group/daily_purchase_by_group_quiz.Rmd
@@ -1,4 +1,4 @@
-Q) 주어진 구매 데이터를 이용하여 그림과 같은 그룹 + 구매일 별 고객 구매율 + 취소율 차트를 그려주세요
+Q) 주어진 구매 데이터를 이용하여 그림과 같은 그룹 & 구매일 별 고객 구매율 & 취소율 차트를 그려주세요
 
 ```{r, message=FALSE, warning=FALSE, include=FALSE}
 library(dplyr)
