--- a/201801/1.unstack_column/unstack_column_quiz.Rmd
+++ b/201801/1.unstack_column/unstack_column_quiz.Rmd
@@ -1,4 +1,4 @@
-Q) 주어진 데이터셋의 학생별 성적이력을 unstack 하는 함수를 작성해주세요~  
+Q) 주어진 데이터셋의 학생별 성적이력을 unstack 하는 함수 unstack.col을 작성해주세요~  
 > **필수 요건 :**  
 > R 기본제공 함수만 이용해야합니다  
 > `for` 구문은 사용할 수 없습니다  
