--- a/201801/2.number_baseball/number_baseball_quiz.Rmd
+++ b/201801/2.number_baseball/number_baseball_quiz.Rmd
@@ -3,13 +3,13 @@ Q) 숫자야구 게임을 만들어주세요!
 - 게임 규칙은 다음과 같습니다  
 
 1. 정답의 길이를 정합니다 (플레이어)  
-2. 0 ~ 9 사이의 숫자가 정답 길이만큼 중복되지 않게 정해집니다 (프로그램)  
+2. 0 ~ 9 사이의 숫자가 정답 길이만큼 중복이 없게 정해집니다 (프로그램)  
 3. 숫자를 추측합니다 (플레이어)  
-4. 순서,숫자 모두 맞으면 strike, 순서는 틀리나 숫자가 맞으면 ball, 숫자가 틀리면 out으로 집계합니다  
+4. 숫자와 순서 모두 맞으면 strike, 숫자가 맞으나 순서가 틀리면 ball, 숫자가 틀리면 out으로 집계합니다  
 5. all strike를 만들면 게임이 끝납니다  
 6. 더 적은 try count로 맞출수록 좋습니다  
   
-- 요구사항은 다음과 같습니다  
+- 필수 요구사항은 다음과 같습니다  
 
 1. 플레이어의 입력(정답의 길이)을 받아야합니다  
 2. 플레이어의 추측에 대해 strike, ball, out 수를 출력해줘야합니다  
