--- a/201801/2.number_baseball/number_baseball_quiz.Rmd
+++ b/201801/2.number_baseball/number_baseball_quiz.Rmd
@@ -11,7 +11,7 @@ Q) 숫자야구 게임을 만들어주세요!
   
 - 필수 요구사항은 다음과 같습니다  
 
-1. 플레이어의 입력(정답의 길이)을 받아야합니다  
+1. 플레이어의 입력(정답의 길이, 정답 추측)을 받아야합니다  
 2. 플레이어의 추측에 대해 strike, ball, out 수를 출력해줘야합니다  
 3. 게임이 끝나면 try count를 출력해줍니다  
 
