--- a/201810/1.flatrate/flatrate_quiz.Rmd
+++ b/201810/1.flatrate/flatrate_quiz.Rmd
@@ -1,9 +1,8 @@
 Q) 사용자별 이용권 시작일 ~ 종료일 정보를 이용하여 다음과 같은 차트를 그려주세요...!
 
 ```{r, message=FALSE, warning=FALSE}
+library(dplyr)
 set.seed(7)
-
-rm(list= ls())
 
 df <-
   data.frame(
@@ -11,8 +10,6 @@ df <-
     from = as.Date(Sys.Date()) + sample(1:20, 10, TRUE)) %>% 
   mutate(
     to = from + sample(3:10, 10, TRUE))
-
-df
 ```
 
 ![target!](flatrate_result.PNG)
